--- a/s.html
+++ b/s.html
@@ -6,35 +6,36 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
     </head>
+    <style>
+        body {
+            color: white;
+            background-color: black;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+            height: 98vh;
+        }
+
+        .edit_1:hover {
+            background-color: purple;
+        }
+
+        .edit_1 {
+            transition: all .3s ease-in-out;
+            padding: 10px 13px;
+            border-radius: 5px
+        }
+    </style>
 
     <body>
+        <div class="edit_1">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
+                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
+            </svg>
+        </div>
 
     </body>
-    <script>
-        // Call from frontend JS (on button click or form submit)
-        function asdad() {
-            fetch("/rename-folder", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json"
-                },
-                body: JSON.stringify({
-                    oldName: "Himanshu",
-                    newName: "ShadowKing"
-                })
-            })
-                .then(res => res.json())
-                .then(data => {
-                    if (data.success) {
-                        alert("✅ Folder renamed!");
-                    } else {
-                        alert("❌ Failed: " + data.error);
-                    }
-                })
-                .catch(err => {
-                    console.error("❌ Error:", err);
-                });
-}
-    </script>
 
 </html>
