--- a/public/index.html
+++ b/public/index.html
@@ -169,7 +169,7 @@
                                         <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path>
                                         <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path>
                                     </svg>
-                                    <div id="edit_1_password" style="margin-left: 10px;" >Change Password</div>
+                                    <div id="edit_1_password" style="margin-left: 10px;">Change Password</div>
                                 </div>
                             </div>
                         </div>
@@ -178,6 +178,11 @@
                     display: flex;justify-content: center;">
                         <div id="logout_button">
                             LOGOUT</div>
+                    </div>
+                    <div class="logout" style="
+                    display: flex;justify-content: center;margin: 10px;">
+                        <div id="delete_account_button">
+                            Delete Account</div>
                     </div>
                 </div>
                 <button class="back-button" id="settingsBackButton">
@@ -1210,6 +1215,10 @@
                 const edit_1_password = document.getElementById("edit_1_password");
                 edit_1_password.addEventListener('click', () => {
                     window.location.href = "change_password_.html";
+                })
+                const delete_account_button = document.getElementById("delete_account_button");
+                delete_account_button.addEventListener('click', () => {
+                    window.location.href = "delete_account.html";
                 })
             });
         </script>
